--- a/index.html
+++ b/index.html
@@ -8,8 +8,24 @@
     <title>tick-tac-toe</title>
 </head>
 <body>
-    <header></header>
-    <main></main>
+    <header>
+    </header>
+    <main>
+        <div id="playground">
+            <div id="row1"></div>
+                <div class="box 1 x">x</div>
+                <div class="box 2"></div>
+                <div class="box 3"></div>
+            <div id="row2"></div>
+                <div class="box 1"></div>
+                <div class="box 2 o" >o</div>
+                <div class="box 3"></div>
+            <div id="row3"></div>
+                <div class="box 1"></div>
+                <div class="box 2"></div>
+                <div class="box 3"></div>
+        </div>
+    </main>
     <footer></footer>
     
     <script src="/js/app.js"></script>
