--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
     <main>
         <div id="playground">
             <div id="row1"></div>
-                <div class="box 1 x">x</div>
-                <div class="box 2"></div>
-                <div class="box 3"></div>
+                <div id="box1" class="box x">x</div>
+                <div id="box2" class="box"></div>
+                <div id="box3" class="box"></div>
             <div id="row2"></div>
-                <div class="box 1"></div>
-                <div class="box 2 o" >o</div>
-                <div class="box 3"></div>
+                <div id="box4" class="box"></div>
+                <div id="box5" class="box o" >o</div>
+                <div id="box6" class="box"></div>
             <div id="row3"></div>
-                <div class="box 1"></div>
-                <div class="box 2"></div>
-                <div class="box 3"></div>
+                <div id="box7" class="box"></div>
+                <div id="box8" class="box"></div>
+                <div id="box9" class="box"></div>
         </div>
     </main>
     <footer></footer>
