js for adding X and O on click

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
         <div id="playground">
             <div id="row1"></div>
                 <div id="box1" class="box"></div>
-                <div id="box2" class="box x">x</div>
+                <div id="box2" class="box"></div>
                 <div id="box3" class="box"></div>
             <div id="row2"></div>
                 <div id="box4" class="box"></div>
-                <div id="box5" class="box o" >o</div>
+                <div id="box5" class="box"></div>
                 <div id="box6" class="box"></div>
             <div id="row3"></div>
                 <div id="box7" class="box"></div>
-                <div id="box8" class="box x">x</div>
+                <div id="box8" class="box"></div>
                 <div id="box9" class="box"></div>
         </div>
     </main>
@@ -32,7 +32,7 @@
   src="https://code.jquery.com/jquery-3.4.1.min.js"
   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
   crossorigin="anonymous"></script>
-  
+
     <script src="/js/app.js"></script>
 </body>
 </html>
