show current player

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <header>
     </header>
     <main>
+        <div id="player-turn">
+            <h3>Current turn</h3>
+            <div id="player" class="box x">
+                X
+            </div>
+        </div>
         <div id="playground">
             <div id="row1"></div>
                 <div id="box1" class="box"></div>
