--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 <body>
     <header>
+        
     </header>
     <main>
-        <div id="player-turn">
+        <div id="player-turn:">
             <h3>Current turn</h3>
             <div id="player" class="box x">
                 X
