functionignn restart button

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
                 <div id="box8" class="box"></div>
                 <div id="box9" class="box"></div>
         </div>
+
+        <button id="restartButton"><a href="/index.html">Restart Game</a></button>
     </main>
     <footer></footer>
     
