set min width of playground

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         
     </header>
     <main>
-        <div id="player-turn:">
-            <h3>Current turn</h3>
+        <div id="playerTurn">
+            <h3>Current turn:</h3>
             <div id="player" class="box x">
                 X
             </div>
@@ -33,7 +33,7 @@
                 <div id="box9" class="box"></div>
         </div>
 
-        <button id="restartButton"><a href="/index.html">Restart Game</a></button>
+        <button id="restart"><a href="/index.html">Restart Game</a></button>
     </main>
     <footer></footer>
     
