reset function doesnt refreash the page
old reset function was to redirect to index page.

new reset adds listners back to play boxes, changes moveNum to 1, and resetscurrent player box to starting position.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div id="box9" class="box"></div>
         </div>
 
-        <button id="restart"><a href="/index.html">Restart Game</a></button>
+        <button id="restart">Restart Game</button>
     </main>
     <footer></footer>
     
