--- a/index.html
+++ b/index.html
@@ -9,15 +9,26 @@
 </head>
 <body>
     <header>
+        <div id="playerOne">
+            <h3>Player #1 score:</h3>
+            <div id="playerOneScore">0</div>
+        </div>
+
+        <div id="playerTurn">
+                <h3>Current turn:</h3>
+                <div id="player" class="box x">
+                    X
+                </div>
+        </div>
+
+        <div id="playerTwo">
+            <h3>Player #2 score:</h3>
+            <div id="playerTwoScore">0</div>
+        </div>
         
     </header>
     <main>
-        <div id="playerTurn">
-            <h3>Current turn:</h3>
-            <div id="player" class="box x">
-                X
-            </div>
-        </div>
+
         <div id="playground">
             <div id="row1"></div>
                 <div id="box1" class="box"></div>
