--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
                 <div id="box9" class="box"></div>
         </div>
 
+        <div id="dialog">I'm a dialog</div>
+
         <button id="restart">Restart Game</button>
     </main>
 
@@ -58,6 +60,12 @@
     src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
     crossorigin="anonymous"></script>
+
+    <script
+    src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
+    integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
+    crossorigin="anonymous"></script>
+
 
     <script src="/js/app.js"></script>
 </body>
