--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div id="box9" class="box"></div>
         </div>
 
-        <div id="dialog">I'm a dialog</div>
+        <div id="dialog"></div>
 
         <button id="restart">Restart Game</button>
     </main>
