--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         <div id="playerTwo">
             <h3>Player #2 score:</h3>
             <div id="playerTwoScore">0</div>
+            <button id="bot">play a bot</button>
+            <button id="human">play with a friend</button>
         </div>
         
     </header>
