add footer and contact info

--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
     </main>
 
     <footer>
-
+        <p>created By Hisham Aljahbli</p>
+        <a href="https://www.linkedin.com/in/haljahbli-softwareeng">Linkedin</a>
+        <a href="https://github.com/hamjahb">Github</a>
+        <a href="mailto:h.aljahbli@gmail.com">Email</a>
     </footer>
     
     <script
