change contact icons and CSS

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./styles/styles.css">
+    <script src="https://kit.fontawesome.com/6b68b3777e.js" crossorigin="anonymous"></script>
     <title>tick-tac-toe</title>
 </head>
 
@@ -56,9 +57,9 @@
 
     <footer>
         <p>created By Hisham Aljahbli</p>
-        <a href="https://www.linkedin.com/in/haljahbli-softwareeng">Linkedin</a>
-        <a href="https://github.com/hamjahb">Github</a>
-        <a href="mailto:h.aljahbli@gmail.com">Email</a>
+        <a href="https://www.linkedin.com/in/haljahbli-softwareeng"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/hamjahb"><i class="	fab fa-github"></i></a>
+        <a href="mailto:h.aljahbli@gmail.com"><i class="fas fa-envelope"></i></a>
     </footer>
     
     <script
